change the page title

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <div id="Content-Container" class="relative flex flex-col w-full max-w-[640px] min-h-screen mx-auto bg-white overflow-x-hidden">
         <div id="Background" class="absolute top-0 w-full h-[430px] rounded-b-[75px] bg-[linear-gradient(180deg,#F2F9E6_0%,#D2EDE4_100%)]"></div>
         <div class="relative flex flex-col gap-[30px] my-[60px] px-5">
-            <h1 class="font-bold text-[30px] leading-[45px] text-center">Booking Successful<br>Congratulations!</h1>
+            <h1 class="font-bold text-[30px] leading-[45px] text-center">Booking Telah Sukses<br>Selamat ya!</h1>
             <div id="Header" class="relative flex items-center justify-between gap-2">
                 <div class="flex flex-col w-full rounded-[30px] border border-[#F1F2F6] p-4 gap-4 bg-white">
                     <div class="flex gap-4">
